top bar ni bitirdim

--- a/app/globals.css
+++ b/app/globals.css
@@ -143,7 +143,7 @@
   .h4 {
     @apply text-2xl font-semibold;
   }
-  /* .container {
-    @apply px-12 mx-auto;
-  } */
+  .container {
+    @apply px-12;
+  }
 }
