--- a/app/globals.css
+++ b/app/globals.css
@@ -131,14 +131,14 @@
     @apply font-secondary text-primary;
   }
   .h1 {
-    @apply text-[40px] xl:text-[54px] uppercase font-black leading-[1.1];
+    @apply text-[40px] leading-[1.1] font-black uppercase xl:text-[54px];
   }
 
   .h2 {
-    @apply text-[36px] leading-[1.3] xl:text-[46px] capitalize font-bold;
+    @apply text-[36px] leading-[1.3] font-bold capitalize xl:text-[46px];
   }
   .h3 {
-    @apply text-3xl font-bold font-primary;
+    @apply font-primary text-3xl font-bold;
   }
   .h4 {
     @apply text-2xl font-semibold;
